--- a/public/about/author.html
+++ b/public/about/author.html
@@ -1,3 +1,3 @@
 <h1>About me</h1>
 <p>I am learning haskell and ruby on rails. Now i am writing compiler in haskell and this app in ruby on rails</p>
-<p>You can find me on <a href="https://github.com/cyberfined">github</a></p>
+<p>You can find me on <a href="https://github.com/cyberfined" target="_blank" rel="nofollow">github</a></p>
